2006-06-28  Mirko Maischberger <mirko@lilik.it>
	In response to #1511917
	* extconf.rb: mozpath stripped.

2006-06-17  Masao Mutoh <mutoh@highway.ne.jp>
	* sample/ruby-gecko.rb: Remove Gtk.init.

2006-06-14  Mirko Maischberger <mirko@lilik.it>
	This should close bug #1495276
	* src/rbgtkmozembed.c: set the moz comp_path in Init if
	DEFAULT_MOZILLA_FIVE_HOME is defined.
	* extconf.rb: Now defaults to xulrunner and defines
	DEFAULT_MOZILLA_FIVE_HOME according to pkg-config.
	
2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>
	* REAMDE: Revised.
	* extconf.rb, src/rbgtkmozembed.c: Added Gtk::MozEmbed::BUILD_VERSION.

2005-09-13 09:51  Mirko Maischberber <mirko@lilik.it>
	GtkMozEmbed is now a core ruby-gnome2 package.
	* extconf.rb: modified to be a part of ruby-gnome2 instead. This
	is not a standalone package anymore.
		
2005-03-26 20:00  Mirko Maischberger <mirko@lilik.it> 
	* extconf.rb: fixed LD_LIBRARY_PATH oddity, now this is handled
	with -Wl,-rpath option of gcc.
	* extconf.rb: fixed bugs and cleaned.
	Reported by Kazuhiro NISHIYAMA, Paul van Tilburg
	
2005-03-17 19:58  Mirko Maischberger <mirko@lilik.it> 
	* src/rbgtkmozembed.c: added Gtk::MozEmbed#on_new_window and
	Gtk::MozEmbed#no_new_window to handle the new_window signal
	correctly.
	* sample/ruby-gecko.rb: Cleaned.
	
2005-03-07 19:58  Mirko Maischberger <mirko@lilik.it> 
	* src/rbgtkmozembed.c: Added the #render_data method, 
	  removed the "<<" overloading.
	* sample/ruby-gecko.rb: Cleaned.

2005-03-07 09:50  Mirko Maischberger <mirko@lilik.it> 
	* extconf.rb: Modified to compile as a standalone package.
	* src/rbgtkmozembed.c: Added the stream related
	  functions. #open_stream, #append_data, #close_stream.
	* COPYING.LIB.README: Some clarifications on licensing.
	
2005-02-20 12:55  Mirko Maischberger <mirko@lilik.it> 

	* extconf.rb: The extconf script now generates a start up script
	  for the sample program automatically. The script sets the